--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <option value="12 horas">12 hrs</option>
             <option value="24 horas">24 hrs</option>
           </select>
-          <h5 class="mt-3">$95.990</h5>
+          <h5 class="mt-3">$99.990</h5>
           <input type="number" placeholder="HORAS:" class="form-control mt-3">
           <button class="btn btn-primary">Añadir al carrito <i class="bi bi-cart2"></i></button>
 
@@ -133,7 +133,6 @@
         <section class="col-12 col- md-6">
           <img src="./IMG/habitacion2.jpeg" alt="foto" class="img-fluid">
         </section>
-
         <section class="col-12 col- md-6 shadow">
           <h3>SUITE TEMÁTICA</h3>
           <p>
@@ -151,7 +150,7 @@
             <option value="12 horas">12 hrs</option>
             <option value="24 horas">24 hrs</option>
           </select>
-          <h5 class="mt-3">$105.000</h5>
+          <h5 class="mt-3">$380.000</h5>
           <input type="number" placeholder="HORAS:" class="form-control mt-3">
           <button class="btn btn-primary">Añadir al carrito <i class="bi bi-cart2"></i></button>
 
@@ -163,7 +162,6 @@
           <section class="col-12 col- md-6">
             <img src="./IMG/habitacion6.jpg" alt="foto" class="img-fluid">
           </section>
-
           <section class="col-12 col- md-6 shadow">
             <h3>SUITE DE LUJO</h3>
             <p>
@@ -182,7 +180,7 @@
               <option value="12 horas">12 hrs</option>
               <option value="24 horas">24 hrs</option>
             </select>
-            <h5 class="mt-3">$280.000</h5>
+            <h5 class="mt-3">$450.000</h5>
             <input type="number" placeholder="HORAS:" class="form-control mt-3">
             <button class="btn btn-primary">Añadir al carrito <i class="bi bi-cart2"></i></button>
 
@@ -191,8 +189,6 @@
           <section class="col-12 col- md-6">
             <img src="./IMG/habitacion8.jpg" alt="foto" class="img-fluid">
           </section>
-
-          <section class="col-12 col- md-6 p-5 shadow">
             <h3>SUITE DE PRESIDENCIAL</h3>
             <p>
               Cruza este umbral y abraza tu lado más indomable. La iluminación escarlata baña un escenario diseñado para
@@ -209,15 +205,65 @@
               <option value="12 horas">12 hrs</option>
               <option value="24 horas">24 hrs</option>
             </select>
-            <h5 class="mt-3">$440.000</h5>
+            <h5 class="mt-3">$600.000</h5>
             <input type="number" placeholder="HORAS:" class="form-control mt-3">
             <button class="btn btn-primary">Añadir al carrito <i class="bi bi-cart2"></i></button>
-          </section>
 
+          </section>
+           <img src="./IMG/habitacion7.jpg" alt="foto" class="img-fluid">
+            <section class="col-12 col- md-6 p-5 shadow">
+            <h3>ESPACIO PLUS</h3>
+            <p>
+              La luz roja de nuestra suite más exclusiva promete una noche inolvidable. Olviden el exterior; aquí solo existen el tacto y el deseo.
+              Este ambiente Plus es el refugio perfecto para las almas audaces. El terciopelo oscuro, suave y firme, espera ser el testigo de sus secretos. Las anillas y detalles en metal son invitaciones silenciosas a explorar sus límites con elegancia. Una barra privada y un diseño sofisticado aseguran que cada momento sea tan sensual como discreto.
+              Permitan que la pasión se desate en este oasis íntimo. Su placer, nuestra única prioridad.
+            </p>
+            <select class="form-select">
+              <option value="4 horas">4 hrs</option>
+              <option value="8 horas">8 hrs</option>
+              <option value="12 horas">12 hrs</option>
+              <option value="24 horas">24 hrs</option>
+            </select>
+            <h5 class="mt-3">$800.000</h5>
+            <input type="number" placeholder="HORAS:" class="form-control mt-3">
+            <button class="btn btn-primary">Añadir al carrito <i class="bi bi-cart2"></i></button>
 
         </section>
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>KIT SADO😈</title>
+        </head>
+        <body>
+
+        <img src="./img/ACCESORIOS.jpg" alt="foto" class="img-fluid">
+            <section class="col-12 col- md-6 p-5 shadow">
+            
+            <p>
+              Detrás de cada pieza carmesí se esconde una promesa: una aventura sin censura. El terciopelo de las esposas invita a la entrega, el antifaz oculta la vergüenza, y la mordaza asegura que solo hable el deseo.
+              ¿Quién manda esta noche? La cuerda roja es el lazo que une la dominación con el abandono total. 
+              Cierra el trato, toma el control, y deja que el látigo escriba el primer capítulo de una noche de placer desbordado. Su cuerpo lo pide a gritos.
+            </p>
+            <select class="form-select">
+              <option value="Esposas de Muñeca (con forro suave)">Esposas de Muñeca (con forro suave)</option>
+              <option value="Mordaza de Bola (Boca)">Mordaza de Bola (Boca)</option>
+              <option value="Antifaz (de cuero, para los ojos)">Antifaz (de cuero, para los ojos)</option>
+              <option value="Esposas/Tobilleras (con correa de sujeción)">Esposas/Tobilleras (con correa de sujeción)</option>
+              <option value="Látigo o Fusta (de tiras)">Látigo o Fusta (de tiras)</option>
+              <option value="Cuerda (de sujeción)">Cuerda (de sujeción)</option>
+            </select>
+            <h5 class="mt-3">$88.990.</h5>
+            <input type="number" placeholder="COLOR:" class="form-control mt-3">
+            <input type="number" placeholder="COLOR:" class="form-control mt-3">
+            <button class="btn btn-primary">Añadir al carrito <i class="bi bi-cart2"></i></button>
+            </head>
+
 
       </section>
+
+
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
